2017-12-21  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FMenuBar::drawItems

2017-12-19  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FMenu::drawItems

2017-12-17  Markus Gans  <guru.mail@muenster.de>
	* The Final Cut now also compiles under Solaris

2017-12-14  Markus Gans  <guru.mail@muenster.de>
	* Add Sun Microsystems workstation console support

2017-12-10  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of the FMenu mouse event handler

2017-12-08  Markus Gans  <guru.mail@muenster.de>
	* More individual arithmetic operations methods in 
	  the implementation of the calculator example

2017-12-05  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FApplication::processMouseEvent
	* Refactoring FApplication::processKeyboardEvent

2017-12-02  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FListBox::drawList and FListBox::onKeyPress
	* Refactoring FWidget::event

2017-12-02  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FApplication::linuxModifierKeyCorrection and
	  FVTerm::updateVTerm
	* Fix getLinuxModifierKey() subcode value as non-const

2017-11-30  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FVTerm::updateTerminalLine

2017-11-26  Markus Gans  <guru.mail@muenster.de>
	* Better code readability by splitting FOptiMove::moveCursor 
	  into sub-functions
	* Improved alignment of the code by changing the indentation 
	  in Boolean expressions

2017-11-25  Markus Gans  <guru.mail@muenster.de>
	* Splitting quirks in serperate methods

2017-11-24  Markus Gans  <guru.mail@muenster.de>
	* Detects Linux console font with 512 characters and 
	  reduces the number of colors to 8
	* Color palette defined for 8 colors

2017-11-23  Markus Gans  <guru.mail@muenster.de>
	* Remove duplicated code from FOptiAttr::changeAttribute

2017-11-22  Markus Gans  <guru.mail@muenster.de>
	* Remove duplicated code in FVTerm::print

2017-11-19  Markus Gans  <guru.mail@muenster.de>
	* Splitting the FString example into sub-functions to make 